<resources>
    <string name="app_name">PokedexMVP</string>

    <string name="title_main_pokedex">Pokedex</string>

    <string name="item_one">Pokémones</string>
    <string name="item_two">Moves</string>
    <string name="item_three">Abilities</string>
    <string name="item_four">Types</string>
    <string name="title_about">About</string>
    <string name="title_moves">Moves</string>
    <string name="title_abilities">Abilities</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="pokemon_types">Type One, Type Two</string>
    <string name="weight">Weight</string>
    <string name="hight">Hight</string>
    <string name="forms">Forms</string>
    <string name="move_name">Move Name</string>
    <string name="pp">PP: 00</string>
    <string name="power">Power: 00</string>
    <string name="damage">Damage Class: Text</string>
    <string name="move_cl">Class: 00</string>
    <string name="dummy_description">Dummy description</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="move_detail">Move Detail</string>
    <string name="ability_detail">Ability Detail</string>

    <string name="loading">Loading…</string>

</resources>
