<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:minWidth="1000dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueGrey"
        android:padding="10dp"
        android:text="@string/ability_detail"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_ability_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/dummy_title"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/items_title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ability_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_description"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_content_size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
