<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/pokemon_name"
                android:textColor="@color/colorBlack"
                android:textSize="25sp"
                android:textAllCaps="true"/>

            <ImageView
                android:id="@+id/iv_pokemon_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_pokemon" />

            <TextView
                android:id="@+id/tv_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokemon_types"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="30dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/tv_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/weight"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_hight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hight"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forms"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="16dp">

                <ImageView
                    android:id="@+id/iv_form1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_pokemon" />

                <ImageView
                    android:id="@+id/iv_form2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"

                    android:src="@drawable/ic_pokemon" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

